# python-template

./: .editorconfig  .markdownlint.yaml  .pre-commit-config.yaml  .vscode  LICENSE  README.md  cookiecutter.json  dev-requirements.txt  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: feature_request.yaml
.github/workflows/: auto-merge.yml  check-links.yml  ci-pip-tools.yml  ci-poetry.yml  ci-uv.yml  ci.yml  publish.yml
hooks/: post_gen_project.py
tests/: test_myproject.py  test_pyproject_patching.py
{{ cookiecutter.project_slug }}/: .markdownlint.yaml  .pre-commit-config.yaml  .taplo.toml  LICENSE  README.md  README.pip-tools.jinja  README.poetry.jinja  README.uv.jinja  dev-requirements.txt  doc-requirements.txt  mkdocs.yml  pyproject.toml  requirements.txt  {% if cookiecutter.mkdocs -%}mkdocs.yml{%- endif %}
{{ cookiecutter.project_slug }}/.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
{{ cookiecutter.project_slug }}/.github/ISSUE_TEMPLATE/: bug_report.yaml  question.yaml
{{ cookiecutter.project_slug }}/.github/workflows/: auto-merge.yml  check-links.yml  ci.yml  docs.yml  pre-commit.yml  pre-commit_autoupdate.yml  publish.yml
{{ cookiecutter.project_slug }}/docs/: gen_ref_nav.py  index.md
{{ cookiecutter.project_slug }}/tests/: test_{{ cookiecutter.project_slug}}.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/: __init__.py  __main__.py
