[project]
name = "{{ cookiecutter.project_slug }}"
{%- if cookiecutter.packaging == "poetry" or cookiecutter.packaging == "uv" %}
version = "0.1.0"
{%- else %}
dynamic = ["version"]
{%- endif %}

description = "{{ cookiecutter.project_description }}"
authors = [
    {name = "{{ cookiecutter.author }}", email = "{{ cookiecutter.author_email }}"}
{%- if cookiecutter.rse_team_as_coauthor %},
    {name = "Imperial College London RSE Team", email = "ict-rse-team@imperial.ac.uk"},
{%- endif %}
]
{%- if cookiecutter.packaging != "poetry" %}
{%- if cookiecutter.use_bsd3_license %}
license = "BSD-3-Clause"
license-files = ["LICENSE"]
{%- endif %}
requires-python = ">=3.13"
dependencies = []

{%- if cookiecutter.packaging == "uv" %}
[dependency-groups]
{%- else %}
[project.optional-dependencies]
{%- endif %}
dev = [
    "ruff<1.0.0,>=0.14.4",
    "mypy<2.0.0,>=1.18.2",
    "pip-tools<8.0.0,>=7.5.1",
    "pre-commit<5.0.0,>=4.4.0",
    "pytest<10.0.0,>=9.0.0",
    "pytest-cov<8.0.0,>=7.0.0",
    "pytest-mock<4.0.0,>=3.15.1",
]
{% if cookiecutter.mkdocs -%}
doc = [
    "mkdocs<2.0.0,>=1.6.1",
    "mkdocstrings<1.0.0,>=0.30.1",
    "mkdocstrings-python<2.0.0,>=1.18.2",
    "mkdocs-material<10.0.0,>=9.6.23",
    "mkdocs-gen-files<1.0.0,>=0.5.0",
    "mkdocs-literate-nav<1.0.0,>=0.6.2",
    "mkdocs-section-index<1.0.0,>=0.3.10",
]
{%- endif %}
{%- endif %}
{%- if cookiecutter.packaging == "poetry" %}
{%- if cookiecutter.use_bsd3_license %}
license = {text = "BSD-3-Clause"}
{%- endif %}

[tool.poetry.dependencies]
python = "^3.13"

[tool.poetry.group.dev.dependencies]
mypy = "VERSION"
pytest = "VERSION"
pytest-cov = "VERSION"
pytest-mock = "VERSION"
pre-commit = "VERSION"
ruff = "VERSION"
{% if cookiecutter.mkdocs %}
[tool.poetry.group.docs.dependencies]
mkdocs = "VERSION"
mkdocstrings = "VERSION"
mkdocstrings-python = "VERSION"
mkdocs-material = "VERSION"
mkdocs-gen-files = "VERSION"
mkdocs-literate-nav = "VERSION"
mkdocs-section-index = "VERSION"
{%- endif -%}
{%- endif %}

[tool.mypy]
disallow_any_explicit = true
disallow_any_generics = true
warn_unreachable = true
warn_unused_ignores = true
disallow_untyped_defs = true
exclude = [".venv/", "docs/"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
addopts = "-v -p no:warnings --cov={{ cookiecutter.project_slug }} --cov-branch --cov-report=html --cov-report=xml --doctest-modules --ignore={{ cookiecutter.project_slug }}/__main__.py --ignore=docs/"

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = [
    "D",   # pydocstyle
    "E",   # pycodestyle
    "F",   # Pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "RUF", # ruff
]
pydocstyle.convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "D100", # Missing docstring in public module
    "D104", # Missing docstring in public package
]


{%- if cookiecutter.packaging == "pip-tools" or cookiecutter.packaging == "uv" %}
[build-system]
requires = ["setuptools>=78", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["{{ cookiecutter.project_slug }}"]

[tool.setuptools_scm]
{%- else %}
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
{%- endif %}
